tests/negative/neg_imported_shared_global.safe
-- Expected: REJECT task_variable_ownership
with provider_Transitive_Global;

package neg_Imported_Shared_Global

   task A

      loop
         provider_Transitive_Global.touch;



   task B

      loop
         provider_Transitive_Global.touch;



